re PR middle-end/33318 (fortran/expr.c:305: internal compiler error: internal consistency failure)

PR target/33318
	* cse.c (fold_rtx): Avoid invalid sharing.

From-SVN: r128187